Fixed the user panel. It will now always be on top and not overlapped by any content.

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -141,6 +141,8 @@ html, body {
     text-align: right;
     white-space: nowrap;
     min-width: 120px;
+    position: relative;
+    z-index: 99;
 }
 
 .item_user {
